# covidtroopers

./: Cargo.toml  README.md
src/: Rocket.toml  main.rs  paste_id.rs
src/templates/: index.html.hbs
src/upload/: 7CvvoyjQC9  PyYmWtUDGQ  gadHQSliHw
