[package]
name = "covidtroopers"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rand = "0.6"
[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates", "tera_templates"]
